vlib/v/checker/tests/array_declare_element_a.out
vlib/v/checker/tests/array_declare_element_a.vv:2:5: error: non-name `arr[0]` on left side of `:=` 
    1 | fn main() {
    2 |     arr[0] := 2
      |        ~~~
    3 | }
