vlib/v/checker/tests/array_declare_element_a.vv
fn main() {
	arr[0] := 2
}
